Fix error mobile version close #7
Fix text wrap in the button in the mobile version and changed the size of the header font on small screens to remove horizontal scrolling

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,12 @@
 .bg-even {
   background-color: rgb(230, 230, 230);
 }
+.btn-wrap {
+  word-break: break-word;
+  white-space: normal;
+}
+@media (min-width: 320px) {
+  h1 {
+    font-size: 2.4rem;
+  }
+}
